syntax = "proto3";
option java_multiple_files = true;
package com.stundb.service;

message Node {
  string ip = 1;
  sint32 port = 2;
  int64 unique_id = 3;
  bool leader = 4;
}

message RegisterRequest {
  string ip = 1;
  sint32 port = 2;
  int64 unique_id = 3;
}

message RegisterResponse {
  bool status = 1;
  repeated Node nodes = 2;
  CRDTRequest state = 3;
}

message CRDTRequest {
  repeated string addSet = 1;
  repeated string removeSet = 2;
}

message CRDTResponse {
  bool status = 1;
}

message ListNodesRequest {
}

message ListNodesResponse {
  repeated Node nodes = 1;
}

message PingRequest {
}

message PingResponse {
}

message StartElectionRequest {
}

message StartElectionResponse {
}

message ElectedRequest {
  Node leader = 1;
}

message ElectedResponse {
}

service NodesService {
  rpc ping(PingRequest) returns (PingResponse);
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc synchronize(CRDTRequest) returns (CRDTResponse);
  rpc list(ListNodesRequest) returns (ListNodesResponse);
  rpc startElection(StartElectionRequest) returns (StartElectionResponse);
  rpc elected(ElectedRequest) returns (ElectedResponse);
}