syntax = "proto3";
option java_multiple_files = true;
package com.stundb.service;

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message SetResponse {
  bool status = 1;
}

message DelRequest {
  string key = 1;
}

message DelResponse {
  bool status = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
}

message DumpRequest {
}

message DumpResponse {
  repeated SetRequest dump = 1;
}

message CapacityRequest {
}

message CapacityResponse {
  int32 capacity = 1;
}

message IsEmptyRequest {
}

message IsEmptyResponse {
  bool is_empty = 1;
}

message ClearRequest {
}

message ClearResponse {
  bool status = 1;
}

message ExistsRequest {
  string key = 1;
}

message ExistsResponse {
  bool exists = 1;
}

service StoreService {
  rpc set(SetRequest) returns (SetResponse);
  rpc del(DelRequest) returns (DelResponse);
  rpc get(GetRequest) returns (GetResponse);
  rpc dump(DumpRequest) returns (DumpResponse);
  rpc capacity(CapacityRequest) returns (CapacityResponse);
  rpc is_empty(IsEmptyRequest) returns (IsEmptyResponse);
  rpc clear(ClearRequest) returns (ClearResponse);
  rpc exists(ExistsRequest) returns (ExistsResponse);
}